cleaned up the structure to remove the node dependencies